Add home screen, file routing, improved drag-drop, and expanded filters
- Add HomeScreen page with file management and routing by fileId
- Refactor LayersSidebar drag-drop: horizontal position detection for
  drop-inside vs reorder (40/60 split), constrained horizontal movement
- Redesign Toolbar filter menu with collapsible groups (8 categories, 40+ filters)
- Update TopNav with editable file name and home navigation
- Improve RangeSlider styling with custom thumb and step support
- Add data-layer-id attributes for DOM queries
- Reorganize docs into documentation/ and llm-context-protocol/session-logs/
- Add photo tool to toolbar

--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "konva": "^10.0.9",
+    "pixi-filters": "^6.1.4",
+    "pixi.js": "^8.14.3",
     "polygon-clipping": "^0.15.7",
     "react": "^19.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^19.2.0",
     "react-konva": "^19.2.0",
-    "react-router-dom": "^7.9.6"
+    "react-router-dom": "^7.9.6",
+    "use-image": "^1.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
